Создано с помощью Colaboratory

--- a/MathAlg_0#seminar.ipynb
+++ b/MathAlg_0#seminar.ipynb
@@ -19,13 +19,13 @@
       ],
       "metadata": {
         "id": "YaxeS2rmMn00",
-        "outputId": "07f10a98-140c-4b34-d785-ce39be47ae35",
+        "outputId": "6b9352e2-9c90-4a4d-89ff-63e8490aa5bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
         }
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -36,7 +36,35 @@
             "text/latex": "$\\displaystyle \\frac{x^{3}}{3} + \\frac{x^{2}}{2} + x$"
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "integrate(x**3 + x*x, x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "id": "rE30iWxnRnjI",
+        "outputId": "6ed6eb23-7208-4d1b-83d0-3f1a12beac04"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "x**4/4 + x**3/3"
+            ],
+            "text/latex": "$\\displaystyle \\frac{x^{4}}{4} + \\frac{x^{3}}{3}$"
+          },
+          "metadata": {},
+          "execution_count": 5
         }
       ]
     }
