Создано с помощью Colaboratory

--- a/Polinomial.ipynb
+++ b/Polinomial.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1cIfF2iOGsti5MfP0WAtL",
+      "authorship_tag": "ABX9TyOkxX1Mk+IQ9aA0Nl1TNiIu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "fp2RE0B4Soxi"
       },
@@ -304,6 +304,71 @@
         "    elif k > 1:\n",
         "      s += f\"{var}^{{{k}}}\"\n",
         "  display(Math(s))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = Polynomial([1, 2, 3])\n",
+        "p = Polynomial([1, 2, 3])\n",
+        "s.show()\n",
+        "f = s.diff()\n",
+        "f.show()\n",
+        "q = f.diff()\n",
+        "q.show()\n",
+        "qq = Polynomial([1, 2, 1])\n",
+        "factor(qq)\n"
+      ],
+      "metadata": {
+        "id": "GIa9UbiOd9P-",
+        "outputId": "6ea40402-2b1a-4fa9-a2fe-7fb183b06485",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 99
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Math object>"
+            ],
+            "text/latex": "$\\displaystyle 3x^{2}+2x+1$"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Math object>"
+            ],
+            "text/latex": "$\\displaystyle 6x+2$"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Math object>"
+            ],
+            "text/latex": "$\\displaystyle 6$"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "([1], 0, [(1, 1), (1, 1)])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
       ]
     }
   ]
